Add restart group
