# api/jobset/v1alpha2/restartgroup_types.go
@@ -1,0 +1,61 @@
+/*
+Copyright 2023 The Kubernetes Authors.
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+    http://www.apache.org/licenses/LICENSE-2.0
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+*/
+
+package v1alpha2
+
+import (
+	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+)
+
+// EDIT THIS FILE!  THIS IS SCAFFOLDING FOR YOU TO OWN!
+// NOTE: json tags are required.  Any new fields you add must have json tags for the fields to be serialized.
+
+// RestartGroupSpec defines the desired state of RestartGroup
+type RestartGroupSpec struct {
+	// INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
+	// Important: Run "make" to regenerate code after modifying this file
+
+	// Foo is an example field of RestartGroup. Edit restartgroup_types.go to remove/update
+	Foo string `json:"foo,omitempty"`
+}
+
+// RestartGroupStatus defines the observed state of RestartGroup
+type RestartGroupStatus struct {
+	// INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
+	// Important: Run "make" to regenerate code after modifying this file
+}
+
+//+kubebuilder:object:root=true
+//+kubebuilder:subresource:status
+
+// RestartGroup is the Schema for the restartgroups API
+type RestartGroup struct {
+	metav1.TypeMeta   `json:",inline"`
+	metav1.ObjectMeta `json:"metadata,omitempty"`
+
+	Spec   RestartGroupSpec   `json:"spec,omitempty"`
+	Status RestartGroupStatus `json:"status,omitempty"`
+}
+
+//+kubebuilder:object:root=true
+
+// RestartGroupList contains a list of RestartGroup
+type RestartGroupList struct {
+	metav1.TypeMeta `json:",inline"`
+	metav1.ListMeta `json:"metadata,omitempty"`
+	Items           []RestartGroup `json:"items"`
+}
+
+func init() {
+	SchemeBuilder.Register(&RestartGroup{}, &RestartGroupList{})
+}
